--- a/index.html
+++ b/index.html
@@ -1,1 +1,57 @@
-<h1> curriculum</h1>
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="CV, Curriculum, Nombre, Profesión">
+    <meta name="description" content="Este es el currículum vitae de Danilo Drouet.">
+    <meta name="author" content="Danilo Drouet">
+    <title>Currículum Vitae de Danilo Drouet</title>
+</head>
+<body>
+    <header>
+        <h1>Danilo Drouet</h1>
+        <p>Profesión: Ingenieria en computacion</p>
+    </header>
+
+    <section>
+        <h2>Datos de Contacto</h2>
+        <ul>
+            <li>Teléfono: 0996416931</li>
+            <li>Email: ddrouet@espol.edu.ec</li>
+            
+        </ul>
+    </section>
+
+    <section>
+        <h2>Habilidades</h2>
+        <ul>
+            <li>Python</li>
+            <li>Java</li>
+            <li>C</li>
+        </ul>
+    </section>
+
+    <section>
+        <h2>Educación</h2>
+        <article>
+            <h3>[Título Obtenido/ en proceso]</h3>
+            <p><strong>Institución:</strong> Espol</p>
+            <p><strong>Duración:</strong> 2023 - pronto</p>
+        </article>
+        <!-- Repite el bloque <article> para más estudios -->
+    </section>
+
+    <section>
+        <h2>Idiomas</h2>
+        <ul>
+            <li>ingles - Nivel B1</li>
+            <li>Español - nativo</li>
+        </ul>
+    </section>
+
+    <footer>
+        <p>© 2025 Danilo Drouet. Todos los derechos reservados.</p>
+    </footer>
+</body>
+</html>
