modificacion del indice

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <li><a href="#datos-contacto">Datos de Contacto</a></li>
             <li><a href="#educacion">Educación</a></li>
             <li><a href="#formulario-contacto">Formulario de Contacto</a></li>
-            <li><a href="#justificacion">Justificación</a></li>
+            <li><a href="#justificacion">Más sobre mí</a></li>
             <li><a href="#referencias">Referencias</a></li>
         </ul>
     </nav>
@@ -64,7 +64,7 @@
     </section>
 
     <section class="aparecer" id="justificacion">
-        <h2 class="subtitle">Mas sobre mi</h2>
+        <h2 class="subtitle">Más sobre mí</h2>
         <p>
             Soy estudiante de Ingeniería en Computación en la Escuela Superior Politécnica del Litoral (ESPOL) en Guayaquil, Ecuador. Me apasiona la programación y el desarrollo de software, y tengo experiencia en proyectos académicos y colaborativos. Busco oportunidades para aplicar mis habilidades técnicas y aprender en un entorno profesional. 
             <a href="https://www.espol.edu.ec/es" target="_blank">Espol</a>.
